--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <div id="app">
       <div class="renderer">
-        <canvas id="render-canvas" width="800" height="600"></canvas>
+        <div class="renderer__canvas-wrapper">
+          <canvas id="render-canvas" width="800" height="600"></canvas>
+        </div>
         <div class="controls">
           <div class="controls__file-inputs">
             <label class="controls__file-input">
